# TestFFMPEG

./: .gitignore  CMakeLists.txt  extra_audio.c  extra_video.c  install_ffmpeg.sh  main.cpp  resample.cpp  resample.h
TestFFMPEG/: TestFFMPEG-Bridging-Header.h  libavdevice.61.2.100.dylib  libavfilter.10.2.102.dylib  libavformat.61.3.104.dylib  libavutil.59.21.100.dylib  libpostproc.58.2.100.dylib  libswresample.5.2.100.dylib  libswscale.8.2.100.dylib
TestFFMPEG/TestFFMPEG/: ContentView.swift  ReSample.c  ReSample.h  TestFFMPEGApp.swift
TestFFMPEG/TestFFMPEG.xcodeproj/: project.pbxproj
TestFFMPEG/TestFFMPEG.xcodeproj/project.xcworkspace/xcuserdata/wangqiang.xcuserdatad/: UserInterfaceState.xcuserstate
TestFFMPEG/TestFFMPEG.xcodeproj/xcuserdata/wangqiang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TestFFMPEG/TestFFMPEG.xcodeproj/xcuserdata/wangqiang.xcuserdatad/xcschemes/: xcschememanagement.plist
XVideoQt/: CMakeLists.txt  main.cpp  sdl_qt.cpp  sdl_qt.h  sdl_qt.ui  xcodec.cpp  xcodec.h  xdecode.cpp  xdecode.h  xdemux.cpp  xdemux.h  xdemuxtask.cpp  xdemuxtask.h  xencode.cpp  xencode.h  xformat.cpp  xformat.h  xmux.cpp  xmux.h  xsdl.cpp  xsdl.h  xthread.cpp  xthread.h  xtools.cpp  xtools.h  xvideo_view.cpp  xvideo_view.h
android/TestFFmpeg/: local.properties  settings.gradle.kts
android/TestFFmpeg/app/: build.gradle.kts
android/TestFFmpeg/app/src/main/: AndroidManifest.xml
android/TestFFmpeg/app/src/main/cpp/: CMakeLists.txt  FFLog.h  native-lib.cpp
android/TestFFmpeg/app/src/main/cpp/include/libavutil/: ffversion.h
android/TestFFmpeg/app/src/main/java/com/felix/test/ffmpeg/: FFApp.kt  MainActivity.kt
android/TestFFmpeg/app/src/main/java/com/felix/test/ffmpeg/utils/: FFUtils.kt
android/TestFFmpeg/app/src/main/java/com/felix/test/ffmpeg/widget/: FFVideoView.kt
android/TestFFmpeg/app/src/main/res/layout/: activity_main.xml
android/TestFFmpeg/app/src/main/res/values/: strings.xml  themes.xml
android/TestFFmpeg/app/src/main/res/values-night/: themes.xml
android/TestFFmpeg/gradle/: libs.versions.toml
android/TestFFmpeg/gradle/wrapper/: gradle-wrapper.properties
ios/TestFFmpeg/TestFFmpeg/: ContentView.swift  TestFFmpegApp.swift
ios/TestFFmpeg/TestFFmpeg.xcodeproj/: project.pbxproj
ios/TestFFmpeg/TestFFmpeg.xcodeproj/project.xcworkspace/xcuserdata/wangqiang.xcuserdatad/: UserInterfaceState.xcuserstate
ios/TestFFmpeg/TestFFmpeg.xcodeproj/xcuserdata/wangqiang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/TestFFmpeg2/TestFFmpeg2/: AppDelegate.h  AppDelegate.m  AudioManager.h  AudioManager.m  MovieDecoder.h  MovieDecoder.m  MovieGLView.h  MovieGLView.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ios/TestFFmpeg2/TestFFmpeg2.xcodeproj/: project.pbxproj
ios/TestFFmpeg2/TestFFmpeg2.xcodeproj/project.xcworkspace/xcuserdata/wangqiang.xcuserdatad/: UserInterfaceState.xcuserstate
ios/TestFFmpeg2/TestFFmpeg2.xcodeproj/xcuserdata/wangqiang.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  build.sh  cut.c  encode_audio.c  encode_audio2.c  encode_video.c  event_sdl.c  extra.h  extra_audio.c  extra_audio.h  extra_video.c  extra_video.h  gen_pic.c  gen_pic2.c  get_info.h  main.c  main.cpp  pcm_player.c  player.c  player_demo.c  queue.h  queue.hpp  remux.c  resample.cpp  resample.h  sdl1.c  simple_palyer.c  simple_palyer2.c  simple_player.c  simple_player2.c  simple_player3.c
src/player/: CMakeLists.txt  audiooutput.h  avframequeue.h  avpacketqueue.h  demuxthread.h  videooutput.h
src/sdl/: CMakeLists.txt
